--- a/templates/decrypt.html
+++ b/templates/decrypt.html
@@ -58,7 +58,7 @@
 
   <footer class="mt-10 text-center text-gray-500 text-sm py-4 flex flex-col items-center gap-2">
     <span>&copy; 2025 Sistem Steganografi | Made with ❤️ By Benony Gabriel</span>
-    <a href="https://github.com/benonygabriel/your-repo" target="_blank" rel="noopener"
+    <a href="https://github.com/gbennnn/stegcrypt" target="_blank" rel="noopener"
       class="inline-flex items-center gap-1 hover:text-gray-700">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 inline" fill="currentColor" viewBox="0 0 24 24">
         <path
@@ -66,7 +66,7 @@
       </svg>
       GitHub Repo
     </a>
-  </footer></svg>
+  </footer>
 </body>
 
 </html>
