--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-100 p-8">
   <div class="max-w-xl mx-auto text-center">
     <h1 class="text-3xl font-bold mb-6">StegCrypt</h1>
-    <p class="text-gray-700 mb-8">StegCrypt adalah alat steganografi ringan untuk menanamkan dan mengekstraksi pesan
+    <p class="text-gray-700 mb-8">Alat steganografi ringan untuk menanamkan dan mengekstraksi pesan
       tersembunyi dalam gambar digital dengan aman.</p>
     <div class="flex flex-col gap-4">
       <a href="/encrypt" class="bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600">Enkripsi Gambar</a>
